-
Bug
-
Resolution: Fixed
-
P1: Critical
-
Qt Creator 18.0.0-beta1
-
None
-
Creator 18.0.0-beta1 + Qt 6.10.0
-
0b10dbc36 (18.0)
Test steps:
1. Open some example (or create a dummy application from the wizard) and select all the build configurations
2. Wait for the project configuration to finish
3. Select 'Projects' from the side panel
4. Change 'Active build configuration' to 'Release'
5. Wait for the project configuration to finish
4. Change 'Active build configuration' to 'Debug'
Result:
Crash.
SOFT ASSERT [10:31:21.859]: "m_buildConfig" in /home/qt/work/build/qt-creator/src/plugins/cmakeprojectmanager/cmakebuildconfiguration.cpp:404
Segmentation fault (core dumped)