src/plugins/cmakeprojectmanager/cmakebuildconfiguration.cpp
@@ -400,10 +400,12 @@ CMakeBuildSettingsWidget::CMakeBuildSettingsWidget(CMakeBuildConfiguration *bc) 
             m_buildConfig->initialCMakeArguments.cmakeConfiguration());
     }
 
-    connect(bs, &BuildSystem::parsingFinished, &m_buildConfig->qmlDebugging, [this] {
+    connect(bs, &BuildSystem::parsingFinished, this, [this] {
         QTC_ASSERT(m_buildConfig, return);
         CMakeBuildSystem *bs = m_buildConfig->cmakeBuildSystem();
         QTC_ASSERT(bs, return);
+        if (bs->isDestructing())
+            return;
         const CMakeConfig config = bs->configurationFromCMake();
         const TriState qmlDebugSetting = m_buildConfig->qmlDebugging();
         bool qmlDebugConfig = CMakeBuildConfiguration::hasQmlDebugging(config);
